--- a/docs/README
+++ b/docs/README
@@ -1,6 +1,7 @@
 Proxima is an example bookmarking application for Solar. It comes with a bare-bones membership management application as well.
 
-Place the example system config file in $system/config.php and browse to the installation.
+Copy the `config/system.example.php` file to `$system/config.php` and browse to the installation.
 
 To register an account with the app, click on "Register" on the right-hand side, underneath the sign-in panel.
 
+To add a bookmark after signing in, browse to "/bookmarks" and click on "Add New Bookmark".
